--- a/app.json
+++ b/app.json
@@ -1,4 +1,14 @@
 {
   "name": "AwesomeChatBot",
-  "displayName": "AwesomeChatBot"
+  "displayName": "AwesomeChatBot",
+  "type": "xxxxxxx",
+  "project_id": "xxxxxxx",
+  "private_key_id": "xxxxxxx",
+  "private_key": "xxxxxxx",
+  "client_email": "xxxxxxx",
+  "client_id": "xxxxxxx",
+  "auth_uri": "xxxxxxx",
+  "token_uri": "xxxxxxx",
+  "auth_provider_x509_cert_url": "xxxxxxx",
+  "client_x509_cert_url": "xxxxxxx"
 }
