--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": ">=0.62.3",
     "react-native-dialogflow": "^3.2.2",
     "react-native-gifted-chat": "^0.7.3",
     "react-native-voice": "^0.2.6"
